# allegro4-troutsneeze

addons/allegrogl/src/: x.c
addons/logg/: CMakeLists.txt
src/x/: icon_data.h  icon_data_stax.h  xwin.c
